Mon Sep 27 09:42:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Enable export file check, use TAO_IDL to generate export files or
          remove the generated by line from the export file itself. Currently
          only for CIAO and DAnCE

Sat Sep 25 06:41:39 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Modified ACE::is_equal() comment once again to make fuzz happy.

Fri Sep 24 14:52:44 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Pipe.{h inl cpp}: Added two new methods, close_read() and
          close_write() to close individual pipe handles. Refactored the
          original close() method to use these and factored out the actual
          closing code to a new inlined close_handle() method.

          Thanks to John Lilley <jlilley at datalever dot com> for this
          addition.

        * NEWS: Added description of the new methods.

Fri Sep 24 12:41:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Updated Remedy platforms

        * ACEXML/parser/parser/Parser.h:
        * ace/Containers_T.h:
        * ace/Containers_T.cpp:
        * ace/OS_NS_string.h:
        * ace/OS_NS_wchar.h:
        * apps/JAWS/clients/WebSTONE/src/nsapi-includes/base/shexp.h:
          Fixed typo

Fri Sep 24 12:32:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Containers_T.h:
        * ace/Containers_T.cpp:
        * ace/OS_NS_string.h:
        * ace/OS_NS_wchar.h:
          Fixed typo

Fri Sep 24 12:24:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Documented vc10, thanks to Paul Carter <pcarter at scires dot com>
          for reporting this.

Fri Sep 24 11:44:06 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
          Adjusted ACE::is_equal() comment to make fuzz happy.

Fri Sep 24 09:35:00 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
